// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getNoTestsFoundMessage returns correct message when monitoring only changed 1`] = `
Object {
  "exitWith0": true,
  "message": "No tests found related to files changed since last commit.
Run Jest without \`-o\` or with \`--all\` to run all tests.",
}
`;

exports[`getNoTestsFoundMessage returns correct message when monitoring only failures 1`] = `
Object {
  "exitWith0": false,
  "message": "No failed test found.
Run Jest without \`--onlyFailures\` or with \`--all\` to run all tests.",
}
`;

exports[`getNoTestsFoundMessage returns correct message with findRelatedTests 1`] = `
Object {
  "exitWith0": false,
  "message": "No tests found, exiting with code 1
Run with \`--passWithNoTests\` to exit with code 0
In /root/dir
  0 files checked across 0 projects. Run with \`--verbose\` for more details.
Pattern: /path/pattern - 0 matches",
}
`;

exports[`getNoTestsFoundMessage returns correct message with findRelatedTests 2`] = `
Object {
  "exitWith0": true,
  "message": "No tests found, exiting with code 0",
}
`;

exports[`getNoTestsFoundMessage returns correct message with passWithNoTests 1`] = `
Object {
  "exitWith0": true,
  "message": "No tests found, exiting with code 0",
}
`;

exports[`getNoTestsFoundMessage returns correct message with verbose option 1`] = `
Object {
  "exitWith0": false,
  "message": "No tests found, exiting with code 1
Run with \`--passWithNoTests\` to exit with code 0

Pattern: /path/pattern - 0 matches",
}
`;

exports[`getNoTestsFoundMessage returns correct message without options 1`] = `
Object {
  "exitWith0": false,
  "message": "No tests found, exiting with code 1
Run with \`--passWithNoTests\` to exit with code 0
In /root/dir
  0 files checked across 0 projects. Run with \`--verbose\` for more details.
Pattern: /path/pattern - 0 matches",
}
`;
